# frida-clr.net-patch

./: .gitignore  .version  README.md
.github/workflows/: CI.yaml
b/frida/subprojects/frida-clr/: detect-netfx.py  meson.build
b/frida/subprojects/frida-clr/src/: Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Marshal.cpp  Marshal.hpp  Process.cpp  Process.hpp  Script.cpp  Script.hpp  Session.cpp  Session.hpp  meson.build
